Fixed logos on mobile> Fixed sidebar so it doesn't cut off logos.

--- a/src/styles/components/facilityDialog.scss
+++ b/src/styles/components/facilityDialog.scss
@@ -28,6 +28,15 @@
   width: 100%;
 }
 
+.fd-avatar {
+  border-radius: 0 !important;
+
+  & > img {
+    object-fit: contain !important;
+    border-radius: 0 !important;
+  }
+}
+
 .fd-header {
   display: flex !important;
   flex-wrap: nowrap !important;
