--- a/src/styles/components/sidebar.scss
+++ b/src/styles/components/sidebar.scss
@@ -64,11 +64,14 @@
 .sidebar-avatar {
   width: 100px !important;
   height: 100px !important;
-}
-.sidebar-avatar>img{
+  border-radius: 0 !important;
+
+  & > img {
     object-fit: contain !important;
-    border-radius: 0px !important;
+    border-radius: 0 !important;
+  }
 }
+
 .sidebar-title {
   height: 100px;
   margin-left: 8px;
