--- a/src/styles/containers/facilityCard.scss
+++ b/src/styles/containers/facilityCard.scss
@@ -32,11 +32,8 @@
 .fc-logo-container {
   width: 100px;
   height: 100px;
-//   box-sizing: border-box;
-  margin: auto;
-  margin-top: -60px;
+  margin: -60px auto auto auto;
   border-radius: 50%;
-//   border: 5px solid white;
   box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
   overflow: hidden;
 }
@@ -45,10 +42,7 @@
   width: 90px;
   height: 90px;
   margin: auto;
-//   border-radius: 50%;
   background-size: contain !important;
-//   padding:5px;
-//   box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2), 0px 8px 10px 1px rgba(0, 0, 0, 0.14), 0px 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
 
 .fc-title {
